--- a/api/package.json
+++ b/api/package.json
@@ -1,20 +1,19 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "backend.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon backend.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mysql2": "^3.11.0",
-    "nodemon": "^3.1.4"
+    "mysql2": "^3.11.0"
   }
 }
