--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,10 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mysql2": "^3.11.0"
+    "express": "^4.21.0",
+    "mysql2": "^3.11.0",
+    "path-to-regexp": "^8.2.0",
+    "send": "^0.19.0",
+    "serve-static": "^1.16.2"
   }
 }
